--- a/Tattoor/Tattoor.csproj
+++ b/Tattoor/Tattoor.csproj
@@ -207,7 +207,7 @@
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="fonts\themify.svg" />
     <Content Include="Global.asax" />
-    <Content Include="Content\Site.css" />
+    <Content Include="Images\tattoo-artist.jpg" />
     <Content Include="Images\logo.png" />
     <Content Include="Images\marker.png" />
     <Content Include="Scripts\bootstrap.js" />
